# humanizer_root

./: .env.example  .gitignore  3DB_QUICK_REFERENCE.md  ADVANCED_FEATURES_PLAN.md  AGENT.md  AGENT_ARCHITECTURE.md  AI_HUMANIZER_MARKET_RESEARCH_2024.md  AI_TELL_DETECTOR_HANDOFF.md  ALLEGORICAL_ENHANCEMENTS_HANDOFF.md  ALLEGORICAL_ENHANCEMENTS_TODO.md  ALLEGORICAL_REDESIGN_HANDOFF.md  ALL_TOOLS_COMPLETE.md  API_REFACTOR_HANDOFF.md  ARCHITECTURE.md  AUI_DATA_RETRIEVAL_GUIDE.md  AUI_HANDOFF.md  AUI_Plan_CC_log  BUGFIX_TOOLS_404_OCT11.md  BUG_FIX_TRANSFORMATION_ERRORS.md  BUG_FIX_TRANSFORMATION_FIELD_MISMATCH.md  CHROMADB_INFRASTRUCTURE_PLAN.md  CHROMADB_MEMORY_TOOLS_ANALYSIS.md  CHROMADB_MIGRATION_STATUS.md  CHROMADB_OPERATOR_README.md  CHROMADB_SESSION_HANDOFF_OCT17.md  CLAUDE.md  CLAUDE_ARCHIVE_IMPORT_HANDOFF.md  CLAUDE_DESKTOP_INTEGRATION_GUIDE.md  CLEAN_RESTART_OCT11.md  CODEBASE_ASSESSMENT_OCT11.md  CONTENT_RENDERING_GUIDE.md  CONVERSATION_RENDERING_GUIDE.md  CONVERSATION_VIEWER_PLAN.md  CONVERSATION_VIEWER_STATUS.md  Computational-Madhyamaka.md  DATABASE_ARCHITECTURE.md  DATABASE_ARCHITECTURE_NOTES.md  DEVELOPMENT_AGENTS_PLAN.md  DOCUMENTATION_AUDIT_OCT10.md  DOCUMENTATION_AUDIT_SUMMARY.md  (+214 more)
.husky/: pre-commit
browser-extension/: CREATE_ICONS.md  README.md  background.js  content-script.js  manifest.json  popup.html  popup.js
cloud-frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
cloud-workbench/: .env.example  .env.production  README_ARCHIVED.md  RESPONSIVE_DESIGN_IMPLEMENTATION.md  SESSION_SUMMARY_M3.md  SUBAGENTS.md  WORKBENCH_M2_HANDOFF.md  WORKBENCH_M3_HANDOFF.md  archive-server.js  fix-attribute-imports.sh  fix-imports.sh  fix-unused-vars.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.build.json  vitest.config.ts
docs/: 2025-12-06-Studio-LLM-vetting-output-screening-2.txt  2025-12-06-Studio-LLM-vetting-output-screening.txt  ALLEGORICAL_PANEL_REDESIGN.md  (+31 more)
humanizer_mcp/: CLAUDE.md  LEARN_TO_USE.md  README.md  STATUS.md  pyproject.toml  requirements.txt  test_mcp.py  wrapper.sh
humanizer_mcp/src/: api_client.py  config.py  database.py  init_db.py  models.py  server.py  server_v2.py  tools.py
(+1229 files in other folders)
