[tool.poetry]
name = "humanizer-mcp"
version = "0.1.0"
description = "MCP server exposing Humanizer API to MCP-compatible agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = ">=0.9.0"
httpx = ">=0.27.0"
sqlalchemy = ">=2.0.0"
chromadb = ">=0.4.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
